fixed title scrollbar bug

--- a/source/css/_partial/article.styl
+++ b/source/css/_partial/article.styl
@@ -37,7 +37,6 @@
   text-decoration: none
   font-size: 2em
   font-weight: 100
-  overflow: scroll
   // margin-bottom:0.15rem
   color: color-default
   // line-height: line-height-title
